--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SudhanPlayz/Discord-MusicBot.git"
+    "url": "git+https://github.com/mrsmook/Discord-MusicBot.git"
   },
   "engines": {
     "node": "14.x"
@@ -22,12 +22,12 @@
     "music",
     "discord-music"
   ],
-  "author": "SudhanPlayz",
+  "author": "mrsmook",
   "license": "SEE LICENSE IN LICENSE",
   "bugs": {
-    "url": "https://github.com/SudhanPlayz/Discord-MusicBot/issues"
+    "url": "https://github.com/mrsmook/Discord-MusicBot/issues"
   },
-  "homepage": "https://github.com/SudhanPlayz/Discord-MusicBot#readme",
+  "homepage": "https://github.com/mrsmook/Discord-MusicBot#readme",
   "dependencies": {
     "colors": "^1.4.0",
     "cpu-stat": "^2.0.1",
