--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
+    "playwright": "^1.15.2",
     "pretty-ms": "^7.0.1",
     "socket.io": "^4.0.1",
     "winston": "^3.3.3"
