--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "passport-discord": "^0.1.4",
     "playwright": "^1.15.2",
     "pretty-ms": "^7.0.1",
+    "puppeteer": "^10.4.0",
     "socket.io": "^4.0.1",
     "winston": "^3.3.3"
   },
