--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express-session": "^1.17.1",
     "fetch": "^1.1.0",
     "jsoning": "^0.11.0",
+    "latest-tweets": "^1.0.4",
     "lavasfy": "2.1.2",
     "lodash": "^4.17.21",
     "lyrics-finder": "^21.7.0",
