--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "install-node-v14": "wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.37.2/install.sh | bash && export NVM_DIR=\"$([ -z \"${XDG_CONFIG_HOME-}\" ] && printf %s \"${HOME}/.nvm\" || printf %s \"${XDG_CONFIG_HOME}/nvm\")\" && [ -s \"$NVM_DIR/nvm.sh\" ] && \\. \"$NVM_DIR/nvm.sh\" && nvm install 14 && nvm use 14",
     "start": "node index",
-    "rm-logs": "rm Logs.log",
-    "heroku-postbuild": "npm run build",
-    "heroku-cleanup": "npx playwright install"
+    "rm-logs": "rm Logs.log"
   },
   "repository": {
     "type": "git",
